Add versel dependencies

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node index.js",
+    "build": "webpack"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,7 +14,10 @@
     "http-errors": "~1.6.3",
     "mongoose": "^7.0.2",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "webpack": "^5.76.3",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-middleware": "^6.0.2"
   },
   "engines": {
     "node": "18.13.0"
